input pushes to the array, no new button

--- a/index.html
+++ b/index.html
@@ -16,9 +16,15 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-8 r2c1 gifMe"> 
+        <div class="col-9 r2c1 gifMe"> 
         </div>
-        <div class="col-4 r2c2 inputMe"> 
+        <div class="col-3 r2c2 inputMe"> 
+                <form action="/action_page.php">
+                    Add A Movie:<br>
+                    <input type="text" name="Movie" class="addMe">
+                    <br><br>
+                    <input type="submit" value="Submit" class="clickMe">
+                  </form> 
         </div>
     </div>
     <script src="./assets/javascript/script.js"></script>
