click event not working for dynamically created elements... <--

--- a/index.html
+++ b/index.html
@@ -11,20 +11,22 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head> 
 <body>  
-    <div class="row">
-        <div class="col-12 r1c1 buttonMe">
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-9 r2c1 gifMe"> 
-        </div>
-        <div class="col-3 r2c2 inputMe"> 
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12 r1c1 buttonMe">
+            </div>
+         </div>
+        <div class="row">
+            <div class="col-9 r2c1 gifMe"> 
+            </div>
+            <div class="col-3 r2c2 inputMe"> 
                 <form action="/action_page.php">
                     Add A Movie:<br>
                     <input type="text" name="Movie" class="addMe">
                     <br><br>
                     <input type="submit" value="Submit" class="clickMe">
-                  </form> 
+                </form> 
+            </div>
         </div>
     </div>
     <script src="./assets/javascript/script.js"></script>
