final, just needs clean up and comments

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
             </div>
         </div>
     </div>
-    <script src="./assets/javascript/script.js"></script>
+ <!--   <script src="../../TEST.js"></script>  -->
+   <!-- <script src="../../TEST2.js"></script>  -->
+    <script src="./assets/javascript/script.js"></script>  
 </body>
 </html> 
