final, CSS updated, form clears, comments updated

--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css"> 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Rammetto+One" rel="stylesheet">
 </head> 
 <body>  
     <div class="container-fluid">
+        <div class="row">
+            <div class="col-12 movieGif">
+                <p class="titleMe">Movie Gifs</p>
+            </div>
+        </div>
         <div class="row">
             <div class="col-12 r1c1 buttonMe">
             </div>
@@ -21,7 +27,7 @@
             </div>
             <div class="col-3 r2c2 inputMe"> 
                 <form action="/action_page.php">
-                    Add A Movie:<br>
+                    <p class="addAmovie">Add a Movie:</p><br>
                     <input type="text" name="Movie" class="addMe">
                     <br><br>
                     <input type="submit" value="Submit" class="clickMe">
@@ -29,8 +35,6 @@
             </div>
         </div>
     </div>
- <!--   <script src="../../TEST.js"></script>  -->
-   <!-- <script src="../../TEST2.js"></script>  -->
     <script src="./assets/javascript/script.js"></script>  
 </body>
 </html> 
