added 'required' to HTML input to keep empty buttons from populating the screen

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="col-3 r2c2 inputMe"> 
                 <form action="/action_page.php">
                     <p class="addAmovie">Add a Movie:</p><br>
-                    <input type="text" name="Movie" class="addMe">
+                    <input type="text" name="Movie" class="addMe" required="required">
                     <br><br>
                     <input type="submit" value="Submit" class="clickMe">
                 </form> 
