Added subtitle with instructions for the gifs

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <div class="row">
             <div class="col-12 movieGif">
                 <p class="titleMe">Movie Gifs</p>
+                <h5 class="subTitleMe">Click on the gifs to start/stop them</h5>
             </div>
         </div>
         <div class="row">
